--- a/package-tracker/circle.yml
+++ b/package-tracker/circle.yml
@@ -2,6 +2,10 @@ machine:
   java:
     version: oraclejdk8
 
+test:
+  override:
+    - echo "test"
+
 deployment:
   acceptance:
     branch: master
